@@ -1,3 +1,11 @@
+2017-09-22  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/manifest.json:
+	Remove content_scripts.css property.
+
+	* tryXpath/background/try_xpath_background.js:
+	Define loadCss function.
+
 2017-09-18  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/manifest.json:
